--- a/lib/dedalo/tools/tool_diffusion/html/tool_diffusion_button_inspector.phtml
+++ b/lib/dedalo/tools/tool_diffusion/html/tool_diffusion_button_inspector.phtml
@@ -48,7 +48,7 @@
 					$html_tool .= '<i class="glyphicon glyphicon-ok" style="color:green"></i>';
 				}
 				if(SHOW_DEBUG===true) {
-					$html_tool .= ' ['.DEDALO_DIFFUSION_DOMAIN.']';
+					$html_tool .= ' ['.DEDALO_DIFFUSION_DOMAIN. ' L'. DEDALO_DIFFUSION_RESOLVE_LEVELS .']';
 				}
 				$html_tool .= '</div>';
 
