Minor css changes

--- a/core/page/css/layout/buttons.less
+++ b/core/page/css/layout/buttons.less
@@ -309,6 +309,11 @@
 		button&  { .fn_append_icon(@icon_name); }
 		.button& { .fn_add_mask(@icon_name); }
 	}
+	.gear {
+		@icon_name : 'gear.svg';
+		button&  { .fn_append_icon(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
+	}
 
 // .contenteditable_buttons (used by content editable)
 	.contenteditable_buttons {
