--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1094,6 +1094,15 @@
 				}
 			}
 
+			// component portal
+			&.component_portal {
+				
+				// section selector
+				.select_section {
+					margin-left: 1em;
+				}
+			}
+
 			// component_radio_button
 			&.component_radio_button {
 				>.content_data {
