--- a/core/services/service_autocomplete/css/service_autocomplete.less
+++ b/core/services/service_autocomplete/css/service_autocomplete.less
@@ -80,24 +80,28 @@
 					padding-right: 0.5em;
 				}
 			}
+		}
 
+		// button to hide/show search options box
+		>.button_options {
+			// content: " ";
+			// .fn_build_button('gear.svg', black, 0.7, 2em);
+			float: right;
+			margin: 1em;
+			margin-top: 1.5em;
+			// cursor: default;
 		}
 
 		>input.autocomplete_input {
 			width: 90% !important;
 			background: #fff url("../../themes/default/icons/search.svg");
 			background-repeat: no-repeat;
-			background-size: auto 65%;
+			background-size: auto 60%;
 			background-position: bottom 6px right 10px;
+			margin: 1em;
 		}
 
-		>span.options {
-			content: " ";
-			.fn_build_button('gear.svg', black, 0.7, 2em);
-			float: right;
-			margin: 0;
-			cursor: default;
-		}
+		
 		>span.visible{
 			display: block;
 		}
