Restore default html input/form elements appearance and enble class .reset_input to restore original appearance

--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -152,6 +152,10 @@ background-color: #FFFF00;
 				//line-height: @menu_heigth;
 				//font-size: 1em;
 				max-width: 99.9%;
+
+				// width: auto;
+				// outline: none;
+				
 				//line-height: 1.1em;
 
 				//padding: 2px;
