--- a/core/services/service_autocomplete/css/service_autocomplete.less
+++ b/core/services/service_autocomplete/css/service_autocomplete.less
@@ -26,7 +26,7 @@
 
 			>.source_selector {
 				display: flex;
-				background-color: #949494;
+				background-color: #888888;
 	    		color: #ffff;
 	    		line-height: 1.25em;
 				>*{
@@ -35,6 +35,7 @@
 				}
 				select {
 					background-color: transparent;
+					-webkit-appearance: caret;
 					outline: none;
 					color: #ffff;
 				}
@@ -58,7 +59,7 @@
 					width: 33.2%;
 					white-space: nowrap;
 					overflow: hidden;
-					padding: 0.5em;
+					padding: 0.25em;
 					margin-top: 1px;
 					color: white;
 
@@ -90,9 +91,9 @@
 
 			>div.search_operators_div {
 				background-color: #e6e6e6;
-				padding: 0.5em;
-				display: flex;
-				padding-bottom: 1em;
+				padding: 0.25em;
+				padding-left: 0.5em;
+				display: flex;				
 
 				>* {
 					width: auto;
@@ -109,7 +110,7 @@
 			// .fn_build_button('gear.svg', black, 0.7, 2em);
 			float: right;
 			margin: 1em;
-			margin-top: 1.5em;
+			// margin-top: 1.5em;
 			// cursor: default;
 			position: absolute;
 			top: 0;
@@ -117,12 +118,12 @@
 		}
 
 		>input.autocomplete_input {
-			width: calc(100% - 4.5em);
+			width: calc(100% - 3.5em);
 			background: #fff url("../../themes/default/icons/search.svg");
 			background-repeat: no-repeat;
 			background-size: auto 60%;
 			background-position: bottom 6px right 10px;
-			margin: 1em;
+			margin: 0.5em;
 		}
 
 		
