Minor css fixes

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1794,6 +1794,10 @@
 			}
 		}
 
+		.cataplasma {
+			background-color: #3070d8;
+		}
+
 		.iframe_container {
 			// background-color: #96FD53;
 			>iframe {
