--- a/core/services/service_autocomplete/css/service_autocomplete.less
+++ b/core/services/service_autocomplete/css/service_autocomplete.less
@@ -17,7 +17,7 @@
 		// box-shadow: 2px 2px 5px 0 rgba(38, 38, 38, 0.3);
 
 		// hide autocomplete_searh_container when parent element .component_portal is not .active
-		.component_portal:not(.active) & {
+		.wrapper_component:not(.active) & {
 			display: none;
 		}
 
