Added support for page locator get

--- a/core/page/html/page.phtml
+++ b/core/page/html/page.phtml
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title><?php echo $tipo .' ' . $section_id ?></title>
 	<link href="../page/css/main.css?v=<?php echo DEDALO_VERSION ?>" rel="stylesheet">
 	<?php /*<link href="<?php echo DEDALO_CORE_URL ?>/common/css/structure.css" rel="stylesheet"> */?>
+	<link rel="shortcut icon" href="../../favicon.ico" />
 </head>
 <body>
 	<div id="main" class="hide"></div>
