Moves portal top buttons and select to buttonn container to clean portal apearance

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -1788,14 +1788,17 @@
 			font-weight: normal;
 			z-index: 2;
 
-			&.label, >div.label {
+			&.label, >div.label, >span.label {
 				font-size: 1.4em;
 				line-height: 1.4em;
+				padding-right: 0.5em;
 			}
 		}
 
-		.cataplasma {
-			background-color: #3070d8;
+		.header_custom {
+			// background-color: #3070d8;
+			position: absolute;
+			width: 100%
 		}
 
 		.iframe_container {
