Add icons sync, reload

--- a/core/page/css/layout/buttons.less
+++ b/core/page/css/layout/buttons.less
@@ -314,6 +314,16 @@
 		button&  { .fn_append_icon(@icon_name); }
 		.button& { .fn_add_mask(@icon_name); }
 	}
+	.reload {
+		@icon_name : 'reload.svg';
+		button&  { .fn_append_icon(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
+	}
+	.sync {
+		@icon_name : 'sync.svg';
+		button&  { .fn_append_icon(@icon_name); }
+		.button& { .fn_add_mask(@icon_name); }
+	}
 
 // .contenteditable_buttons (used by content editable)
 	.contenteditable_buttons {
